objects/Log__e.object
<CustomObject>
    <description>Logs</description>
    <fields>
        <fullName>DML__c</fullName>
        <label>DML</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOQL__c</fullName>
        <label>SOQL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>num_Line__c</fullName>
        <label>Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txl_Message__c</fullName>
        <label>Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>txt_Class__c</fullName>
        <label>Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Context__c</fullName>
        <label>Context</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Level__c</fullName>
        <defaultValue>&quot;DEBUG&quot;</defaultValue>
        <label>Level</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Method__c</fullName>
        <label>Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_User__c</fullName>
        <label>User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <pluralLabel>Logs</pluralLabel>
</CustomObject>